# chroma

./: .gitignore  Cargo.toml  DECISIONS.md  README.md
.github/workflows/: ci.yml
app/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/lib/: api.ts  types.ts
claude_info/: Chroma-Requirements-Architecture.docx  ORCHESTRATION.md
crates/chroma-app/: Cargo.toml
crates/chroma-app/src/: main.rs
crates/chroma-camera/: Cargo.toml
crates/chroma-camera/src/: lib.rs  spring.rs
crates/chroma-capture-api/: Cargo.toml
crates/chroma-capture-api/src/: capturer.rs  clock.rs  error.rs  event.rs  fakes.rs  frame.rs  lib.rs
crates/chroma-capture-wayland/: Cargo.toml
crates/chroma-capture-wayland/src/: clock.rs  lib.rs  portal.rs
crates/chroma-capture-x11/: Cargo.toml
crates/chroma-capture-x11/examples/: record.rs
crates/chroma-capture-x11/src/: clock.rs  lib.rs  stub.rs
crates/chroma-capture-x11/src/linux/: capturer.rs  events.rs  mod.rs  session.rs
crates/chroma-capture-x11/tests/: x11_capture.rs
crates/chroma-compositor/: Cargo.toml
crates/chroma-compositor/src/: lib.rs  raster.rs
crates/chroma-core-api/: Cargo.toml
crates/chroma-core-api/src/: camera.rs  compositor.rs  eval.rs  fakes.rs  geometry.rs  keyframe.rs  lib.rs  modifier.rs  project.rs  smoother.rs  time.rs
crates/chroma-core-api/tests/: project_roundtrip.rs
crates/chroma-media-api/: Cargo.toml
crates/chroma-media-api/src/: decoder.rs  encoder.rs  error.rs  fakes.rs  frame.rs  lib.rs  spec.rs
crates/chroma-media-ffmpeg/: Cargo.toml
crates/chroma-media-ffmpeg/examples/: clip.rs  studio.rs
crates/chroma-media-ffmpeg/src/: decode.rs  lib.rs
crates/chroma-modifiers/: Cargo.toml
crates/chroma-modifiers/src/: cropzoom.rs  cursor.rs  easing.rs  keyframe_camera.rs  lib.rs  text.rs
crates/chroma-project/: Cargo.toml
crates/chroma-project/src/: error.rs  history.rs  io.rs  lib.rs  preset.rs
crates/chroma-render/: Cargo.toml
crates/chroma-render/examples/: compose.rs
crates/chroma-render/src/: lib.rs
crates/chroma-studio/: Cargo.toml
crates/chroma-studio/src/: image.rs  lib.rs  recorder.rs  source.rs
