# Chroma — Cargo workspace.
#
# Layout follows ORCHESTRATION.md §9: one crate per directory under `crates/`,
# contract crates suffixed `-api` holding only traits + value types + fakes.
#
# chroma-capture-x11 is a member but compiles to a stub off Linux (its x11rb
# dependency is target-gated), so the workspace builds on Windows and the real
# backend builds on Linux/WSL. chroma-capture-wayland (M7) is still deferred.
[workspace]
resolver = "2"
# The Tauri desktop shell under `app/src-tauri` is its own workspace (it pulls
# the heavy webview deps); keep it out of this one entirely.
exclude = ["app"]
members = [
    "crates/chroma-core-api",
    "crates/chroma-capture-api",
    "crates/chroma-media-api",
    "crates/chroma-capture-x11",
    "crates/chroma-capture-wayland",
    "crates/chroma-compositor",
    "crates/chroma-camera",
    "crates/chroma-render",
    "crates/chroma-media-ffmpeg",
    "crates/chroma-modifiers",
    "crates/chroma-project",
    "crates/chroma-studio",
    "crates/chroma-app",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.90"
repository = "https://github.com/rilonic/chroma"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal contract crates, referenced by path so consumers depend on the
# `-api` surface only (ORCHESTRATION.md §0 rule 2).
chroma-core-api = { path = "crates/chroma-core-api", version = "0.1.0" }
chroma-capture-api = { path = "crates/chroma-capture-api", version = "0.1.0" }
chroma-media-api = { path = "crates/chroma-media-api", version = "0.1.0" }
