[package]
name = "chroma-core-api"
description = "Chroma core contract: shared value types, the Modifier trait, and the CompositePass drawing sink. No logic."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
